<resources>
    <string name="app_name">ProvaPDM</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="reservarMesa1">Reservar</string>
    <string name="salvarOperacao">ToggleButton</string>
    <string name="salvar_operacao">Salvar operação</string>
    <string name="liberarMesas">ToggleButton</string>
    <string name="liberar_mesas">Liberar Mesas</string>
    <string name="numero_da_mesa">Numero da Mesa</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="n_mero_mesa">Número mesa</string>
    <string name="liberar_mesa">liberar mesa</string>
    <string name="reservar_todas_as_mesas">reservar todas as mesas</string>
    <string name="senha">Senha</string>
    <string name="usuario">Usuario</string>
    <string name="entrar">Entrar</string>
    <string name="reservada">Reservada</string>
    <string name="reservar">Reservar</string>
    <string name="salvar_opera_o">Salvar Operação</string>
    <string name="selecione_a_cor_desejada_para_as_mesas_liberadas">Selecione a cor desejada para as mesas liberadas:</string>
    <string name="selecione_a_cor_desejada_para_as_mesas_reservadas">Selecione a cor desejada para as mesas reservadas:</string>
    <string name="button">Button</string>
    <string name="roxo">Roxo</string>
    <string name="vermelho_padr_o">Vermelho (Padrão)</string>
    <string name="azul_padr_o">Azul (Padrão)</string>
    <string name="verde">Verde</string>
    <string name="laranja">Laranja</string>
    <string name="amarelo">Amarelo</string>
</resources>