<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="398dp"
        android:layout_height="217dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729">

        <Button
            android:id="@+id/setLaranja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FA8B02"
            android:text="@string/laranja"
            android:textColor="#000000" />

        <Button
            android:id="@+id/setRoxo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#7E0FDD"
            android:text="@string/roxo"
            android:textColor="#000000" />

        <Button
            android:id="@+id/setVermelho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#DF3C19"
            android:text="@string/vermelho_padr_o"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="350dp"
        android:layout_height="19dp"
        android:text="@string/selecione_a_cor_desejada_para_as_mesas_liberadas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        tools:layout_editor_absoluteX="7dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecione_a_cor_desejada_para_as_mesas_reservadas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="398dp"
        android:layout_height="210dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078">

        <Button
            android:id="@+id/setAmarelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#DDD26F"
            android:text="@string/amarelo"
            android:textColor="#000000" />

        <Button
            android:id="@+id/setAzul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F51B5"
            android:text="@string/azul_padr_o"
            android:textColor="#000000" />

        <Button
            android:id="@+id/setVerde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#5EAE6C"
            android:text="@string/verde"
            android:textColor="#000000" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>